<resources>
    <string name="app_name">MyFirstApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="contact_image">Contact-Image</string>
    <string name="contact">Contact</string>
    <string name="textview">TextView</string>
    <string name="contact_number">Contact Number</string>
    <string name="add_button">1</string>
    <string name="newtextview">TextView</string>
    <string name="textview1">1</string>

    <string name="time">Time</string>
    <string name="contact_hello_world_hy_g">Contact Hello World HY G</string>
    <string name="Message" />
    <string name="message">message</string>
    <string name="text">Text</string>
    <string name="send_message">Send Message</string>
    <string name="enter_your_message">Enter Your Message</string>
    <string name="textmessage">TextMessage</string>
    <string name="messageinput">MessageInput</string>
    <string name="sendmsg">sendMsg</string>
    <string name="send">Send</string>

    <string name="enter_message">Enter Message</string>

    <string name="button1">button</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="img_contact">img_contact</string>
    <string name="number" />
    <string name="dummy_number">Dummy Number</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="textview123">TextView</string>
    <string name="textview321">TextView321</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="my_contacts">My Contacts</string>
    <string name="add_conversation">Add Conversation</string>
    <string name="name">Name</string>
    <string name="tick">TODO</string>
</resources>