<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_id2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/outer_linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="11dp">


            <LinearLayout
                android:id="@+id/inner_linear_layout2"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="11dp"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:id="@+id/upper_linear_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/timeStampId2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textSize="15sp"
                        android:textStyle="bold|normal" />


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/contact"
                        android:textAlignment="viewEnd"
                        android:textColor="#2196F3"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textSize="18sp" />
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgContact2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/contact_image"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>

