<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/conversationCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgConversation"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/contact_image"
                tools:srcCompat="@tools:sample/avatars"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/inner_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:orientation="vertical"
                tools:ignore="ExtraText">

                <LinearLayout
                    android:id="@+id/upper_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:layout_marginBottom="0dp">

                    <TextView
                        android:id="@+id/userConversation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/name"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/timeStampConversation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/time"
                        android:textAlignment="viewEnd"
                        android:textSize="15sp"
                        android:textStyle="bold|normal" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/nested_inner_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:layout_marginTop="0dp">
                    >

                    <TextView
                        android:id="@+id/bodyConversation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/text"
                        android:textSize="18sp"
                        tools:layout_marginEnd="0dp" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>